<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/cardCornerRadius"
    app:cardElevation="@dimen/cardElevation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textview_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginContent"
            android:layout_marginTop="@dimen/marginLayout"
            android:fontFamily="@font/comicbold"
            android:text="@string/title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/body1" />

        <View
            android:id="@+id/view"
            android:layout_width="50dp"
            android:layout_height="5px"
            android:layout_below="@+id/textview_info_title"
            android:layout_alignStart="@+id/textview_info_title"
            android:background="@color/colorYellow"/>

        <TextView
            android:id="@+id/textview_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view"
            android:layout_marginStart="@dimen/marginContent"
            android:layout_marginTop="@dimen/marginSpace"
            android:layout_marginEnd="@dimen/marginContent"
            android:fontFamily="@font/comicregular"
            android:text="@string/info"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/body2" />

        <Button
            android:id="@+id/button_mulai"
            style="@style/buttonYellowStyle"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_below="@+id/textview_info"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/marginContent"
            android:background="@drawable/ui_button_yellow"
            android:text="@string/mulai"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/button_batal"
            style="@style/buttonYellowStyle"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_below="@+id/button_mulai"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/marginLayout"
            android:layout_marginBottom="@dimen/marginLayout"
            android:background="@drawable/ui_button_yellow_border"
            android:text="Lain Kali"
            android:textColor="@color/colorYellow" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>