<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PertanyaanActivity">

        <TextView
            android:id="@+id/textview_menu"
            style="@style/textviewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginLayout"
            android:text="@string/kritik_dan_saran"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_aksara"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/marginLayout"
            android:layout_marginTop="@dimen/marginContent"
            android:layout_marginBottom="@dimen/marginContent"
            android:layout_marginEnd="@dimen/marginLayout"
            app:cardCornerRadius="@dimen/cardCornerRadius"
            app:cardElevation="@dimen/cardElevation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_menu">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textview_info_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/marginLayout"
                    android:layout_marginTop="@dimen/marginLayout"
                    android:fontFamily="@font/comicbold"
                    android:text="Email"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/body1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view"
                    android:layout_width="50dp"
                    android:layout_height="5px"
                    android:layout_below="@+id/textview_info_title"
                    android:layout_alignStart="@+id/textview_info_title"
                    android:background="@color/colorYellow"
                    app:layout_constraintStart_toStartOf="@+id/textview_info_title"
                    app:layout_constraintTop_toBottomOf="@+id/textview_info_title" />

                <EditText
                    android:id="@+id/edittext_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/marginLayout"
                    android:layout_marginTop="@dimen/marginSpace"
                    android:layout_marginEnd="@dimen/marginLayout"
                    android:background="@drawable/bg_aksara"
                    android:fontFamily="@font/comicregular"
                    android:hint="@string/sample_gmail_com"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/body1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view" />

                <TextView
                    android:id="@+id/textview_nama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/marginLayout"
                    android:layout_marginTop="@dimen/marginLayout"
                    android:fontFamily="@font/comicbold"
                    android:text="@string/nama_lengkap"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/body1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edittext_email" />

                <View
                    android:id="@+id/view_nama"
                    android:layout_width="50dp"
                    android:layout_height="5px"
                    android:layout_below="@+id/textview_nama"
                    android:layout_alignStart="@+id/textview_nama"
                    android:background="@color/colorYellow"
                    app:layout_constraintStart_toStartOf="@+id/textview_nama"
                    app:layout_constraintTop_toBottomOf="@+id/textview_nama" />

                <EditText
                    android:id="@+id/edittext_namalengkap"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/marginLayout"
                    android:layout_marginTop="@dimen/marginSpace"
                    android:layout_marginEnd="@dimen/marginLayout"
                    android:background="@drawable/bg_aksara"
                    android:fontFamily="@font/comicregular"
                    android:hint="@string/masukkan_nama_lengkap"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/body1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_nama" />

                <TextView
                    android:id="@+id/textview_masukan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/marginLayout"
                    android:layout_marginTop="@dimen/marginLayout"
                    android:fontFamily="@font/comicbold"
                    android:text="Berikan Masukan"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/body1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edittext_namalengkap" />

                <View
                    android:id="@+id/view_masukan"
                    android:layout_width="50dp"
                    android:layout_height="5px"
                    android:layout_below="@+id/textview_masukan"
                    android:layout_alignStart="@+id/textview_masukan"
                    android:background="@color/colorYellow"
                    app:layout_constraintStart_toStartOf="@+id/textview_masukan"
                    app:layout_constraintTop_toBottomOf="@+id/textview_masukan" />

                <EditText
                    android:id="@+id/edittext_masukan"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="@dimen/marginLayout"
                    android:layout_marginTop="@dimen/marginSpace"
                    android:layout_marginEnd="@dimen/marginLayout"
                    android:background="@drawable/bg_aksara"
                    android:fontFamily="@font/comicregular"
                    android:gravity="top"
                    android:hint="Ketik disini..."
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/body1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_masukan" />

                <CheckBox
                    android:id="@+id/textview_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/marginLayout"
                    android:layout_marginTop="@dimen/marginLayout"
                    android:layout_marginEnd="@dimen/marginLayout"
                    android:fontFamily="@font/comicregular"
                    android:gravity="top"
                    android:text="@string/persetujuan"
                    android:textColor="@color/colorGrey"
                    android:textSize="@dimen/body2"
                    android:buttonTint="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edittext_masukan" />

                <Button
                    android:id="@+id/button_lihat"
                    style="@style/buttonYellowStyle"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="@dimen/marginLayout"
                    android:layout_marginTop="@dimen/marginContent"
                    android:layout_marginEnd="@dimen/marginLayout"
                    android:layout_marginBottom="@dimen/marginContent"
                    android:background="@drawable/ui_button_yellow"
                    android:text="@string/kirim"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textview_info" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>